--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,6 +5,10 @@ doctrine:
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '15'
+        types:
+          datetime_immutable: \Carbon\Doctrine\DateTimeImmutableType
+          datetime: \Carbon\Doctrine\DateTimeType
+          uuid: Symfony\Bridge\Doctrine\Types\UuidType
 
         profiling_collect_backtrace: '%kernel.debug%'
     orm:
@@ -18,8 +22,8 @@ doctrine:
             App:
                 type: attribute
                 is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
+                dir: '%kernel.project_dir%/src/Domain'
+                prefix: 'App\Domain'
                 alias: App
 
 when@test:
