--- a/.env
+++ b/.env
@@ -16,7 +16,8 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=c4dd568fc84f4fe65d4fa65235ac3678
+APP_SECRET=
+APP_DEBUG=true
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,5 +27,5 @@ APP_SECRET=c4dd568fc84f4fe65d4fa65235ac3678
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
