--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 # IDE and Editors
 .idea
 .vscode
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
