--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,14 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
+        "lexik/jwt-authentication-bundle": "^2.*",
         "nesbot/carbon": "^2.72",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
         "symfony/serializer": "6.4.*",
         "symfony/uid": "6.4.*",
         "symfony/validator": "6.4.*",
