--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
-        "lexik/jwt-authentication-bundle": "^2.*",
+        "lexik/jwt-authentication-bundle": "^2",
         "nesbot/carbon": "^2.72",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
